# rust-ocaml-derive

./: .gitignore  Cargo.toml  LICENSE  README.md
example/: Cargo.toml  README.md  dune
example/src/: .merlin  jbuild  lib.rs  main.ml  stubs.ml
src/: derive.rs  lib.rs  stubs.rs
