[package]
name = "derive-ocaml"
version = "0.1.3"
authors = ["joris giovannangeli <joris.giovannangeli@ahrefs.com>"]
license = "MIT"
description = """
Custom derive and procedural macros for easy FFI with ocaml on top of the ocaml crate
"""
edition = "2018"
categories = [ "external-ffi-bindings" ]
keywords = [ "ocaml", "ffi", "derive" ]
readme = "README.md"
repository = "https://github.com/ahrefs/rust-ocaml-derive"
homepage = "https://github.com/ahrefs/rust-ocaml-derive"


[lib]
proc-macro = true

[features]
default = [ "derive" ]

# Implement custom derive for FromValue/ToValue ocaml traits
derive = [ "synstructure" ]

stubs = ["syn/full"]

[dependencies]
synstructure = { version = "0.12", optional = true }
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
