(include_subdirs unqualified)

(rule
 (deps (source_tree .))
 (targets libexample_stubs.a)
 (action (progn
          (run cargo build -Z unstable-options --out-dir . --target-dir ../rust --release)
          )))

(library
   (name stubs)
   (modules stubs)
   (self_build_stubs_archive (example))
   (c_library_flags         (-lpthread -lc -lm))
   )

(executable

   (name main)
   (modules main)
   (libraries stubs)
   )
