(include_subdirs unqualified)

(rule
 (deps (source_tree .))
 (targets libexample_stubs.a)
 (action (progn
          (system "cd .. && cargo build --release")
          (system "cp ../../target/release/libexample_stubs.a .")
          )))

(library
   (name stubs)
   (modules stubs)
   (foreign_archives example_stubs)
   (c_library_flags         (-lpthread -lc -lm))
   )

(executable

   (name main)
   (modules main)
   (libraries stubs)
   )
